# goit-algo2-hw-05

./: README.md  pyproject.toml  task_01.py  task_02.py
