[tool.poetry]
name = "goit-algo2-hw-05"
version = "0.1.0"
description = ""
authors = ["Artur Prepelytsia <preart81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mmh3 = "^5.1.0"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
